docs: package is agnostic to IR signals and contract may be implemented in different ways

--- a/esphome.yaml
+++ b/esphome.yaml
@@ -2,8 +2,8 @@ packages:
   fan: !include common/fan.yaml
 
 esphome:
-  name: maxxfan-ir
-  friendly_name: Maxxfan IR
+  name: maxxfan
+  friendly_name: Maxxfan
 
 # Your own configuration goes here
 esp32:
